# myopy

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
myopy/: __init__.py  conf.py  pyfile.py  utils.py
pyconf/: __init__.py  conf.py  utils.py
tests/: test.py  test_conf.py  test_config.py  test_pyfile.py  test_utils.py
