[tool.poetry]
name = "myopy"
version = "0.1.1"
description = "myopy, run blind python files."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/loiccoyle/myopy"
keywords = ["config", "source"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
